# cg

./: .gitignore  CGConfig.h.in  CMakeLists.txt  README.md
assets/shaders/: basic.fs  basic.gs  basic.vs  shadow.vs
src/: buffers.h  circle.cpp  circle.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  frame_limiter.h  game_object.cpp  game_object.h  global_defines.h  input.cpp  input.h  main.cpp  object_manager.cpp  object_manager.h  objects.cpp  objects.h  perlin.cpp  perlin.h  quad.cpp  quad.h  shader.cpp  shader.h  shader_manager.cpp  shader_manager.h  uniform_buffer.cpp  uniform_buffer.h  vector2.h  vertex.h
src/components/: camera.cpp  camera.h  component.cpp  component.h  controller.cpp  controller.h  cube.cpp  cube.h  light.cpp  light.h  mesh.cpp  mesh.h  transform.cpp  transform.h
